--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Gilbert
+
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}/${DATABASE_DB}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.flyway.user=${DATABASE_USER}
+spring.flyway.password=${DATABASE_PASSWORD}
+spring.flyway.schemas=${DATABASE_DB}
+spring.flyway.locations=classpath:db/migration
