Some minio and storage stuff, but not implemented, at all

--- a/Gilbert/.env.example
+++ b/Gilbert/.env.example
@@ -2,3 +2,7 @@ DATABASE_HOST=localhost:3306 # The host of the database
 DATABASE_DB=gilbert # The database of the database host
 DATABASE_USER=root # The database username
 DATABASE_PASSWORD=root # The password of the user
+
+S3_ENDPOINT=http://localhost:9000 # S3 endpoint
+S3_ACCESS_KEY=minioadmin # The access key for S3 storage
+S3_ACCESS_SECRET=minioadmin # The access secret for S3 storage
