--- a/Gilbert/.env
+++ b/Gilbert/.env
@@ -2,3 +2,7 @@ DATABASE_HOST=localhost:3306
 DATABASE_DB=gilbert
 DATABASE_USER=root
 DATABASE_PASSWORD=root
+
+S3_ENDPOINT=http://localhost:9000
+S3_ACCESS_KEY=minioadmin
+S3_ACCESS_SECRET=minioadmin
