--- a/Gilbert/.env.example
+++ b/Gilbert/.env.example
@@ -1,3 +1,6 @@
+SERVER_ADDRESS=127.0.0.1 # The address to host this server on
+PORT=8000 # The port to host the server on
+
 DATABASE_HOST=localhost:3306 # The host of the database
 DATABASE_DB=gilbert # The database of the database host
 DATABASE_USER=root # The database username
