--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=Gilbert
 
 spring.config.import=optional:file:.env[.properties]
 
+server.address=${SERVER_ADDRESS}
+server.port=${PORT}
+
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST}/${DATABASE_DB}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
