--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Gilbert
 
+logging.level.root=debug
+
 spring.config.import=optional:file:.env[.properties]
 
 server.address=${SERVER_ADDRESS}
