--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Gilbert
 
-logging.level.root=debug
+logging.level.root=info
 
 spring.config.import=optional:file:.env[.properties]
 
