working on frontend for posts, and trying to fix so i can run program

--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Gilbert
 
 logging.level.root=info
 
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:classpath:.env[.properties],optional:file:.env[.properties],optional:file:./.env[.properties]
 
 server.address=${SERVER_ADDRESS}
 server.port=${PORT}
