Images (profile pictures currently) can be stored in S3 storages.

--- a/Gilbert/docker-compose.yaml
+++ b/Gilbert/docker-compose.yaml
@@ -8,5 +8,18 @@ services:
       - "3306:3306"
     volumes:
       - data:/var/lib/mysql
+  minio:
+    image: docker.io/bitnami/minio:2022
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    volumes:
+      - 'minio_data:/data'
+    environment:
+      - MINIO_ROOT_USER=root
+      - MINIO_ROOT_PASSWORD=rootpass
+      - MINIO_DEFAULT_BUCKETS=gilbert
+
 volumes:
   data:
+  minio_data:
