--- a/Gilbert/src/main/resources/application.properties
+++ b/Gilbert/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.flyway.user=${DATABASE_USER}
 spring.flyway.password=${DATABASE_PASSWORD}
 spring.flyway.schemas=${DATABASE_DB}
 spring.flyway.locations=classpath:db/migration
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
